# rapidagent

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
data/: rapidagent.db  tools.json
src/backend/rapidagent/: agents.py  app.py  llms.py  pipelines.py  rag.py  store.py  tools.py
src/electron/: main.js  preload.js
src/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
src/frontend/src/: App.tsx  index.css  main.tsx
src/frontend/src/components/: DarkModeToggle.tsx
src/frontend/src/lib/: api.ts
src/frontend/src/pages/: AgentMonitorPage.tsx  AgentsPage.tsx  ChatPage.tsx  KeysPage.tsx  MonitorPage.tsx  PipelinesPage.tsx  ToolDetailPage.tsx  ToolsPage.tsx
tests/: conftest.py  test_app.py  test_llms.py  test_store.py  test_tools.py
tests/backend/: test_app.py
