[tool.poetry]
name = "rapidagent"
version = "0.1.0"
description = "RapidAgent backend for LLMs, tools, agents, and RAG"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "rapidagent", from = "src/backend" }]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic = "^2.8.2"
openai = "^1.43.0"
httpx = "^0.27.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
